layout fix on iphone xs

--- a/css/main.css
+++ b/css/main.css
@@ -329,7 +329,7 @@ body.before-load {
 }
 
 .normal-content {
-  margin-top: 20rem;
+  margin-top: 50rem;
   margin-bottom: 10rem;
   display: flex;
   flex-direction: column;
